chore: ignore .env and .env.bak

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 .cursor/rules/byterover-rules.mdc
 .kiro/steering/byterover-rules.md
 .qoder/rules/byterover-rules.md
-.augment/rules/byterover-rules.md
+.augment/rules/byterover-rules.md.env.bak
+.env
